написал метод полёта, нужно написать метод падения

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <script type="module" src="/src/main.ts"></script>
 <!--		 TODO убрать лишний код-->
 <script type="text/javascript">
-    document.addEventListener("keydown", (e) => console.log(e.code));
-    document.addEventListener("keyup", (e) => console.log(e.code));
+    // document.addEventListener("keydown", (e) => console.log(e.code));
+    // document.addEventListener("keyup", (e) => console.log(e.code));
 </script>
 </body>
 </html>
